--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -64,7 +64,8 @@
     "build:browser:modern:bundle-size": "VISUALIZER=true npm run build:browser:modern",
     "build:npm:dev": "rollup --config rollup-configs/rollup.sdk.npm.mjs --environment VERSION:$npm_package_version,NPM",
     "package": "npm pack",
-    "release": "npm publish"
+    "release": "npm publish",
+    "postinstall": "echo 'This package is deprecated and no longer maintained. Please migrate to the latest @rudderstack/analytics-js (https://www.npmjs.com/package/@rudderstack/analytics-js) package for enhanced features, security updates, and ongoing support. For more details, visit the official documentation: https://www.rudderstack.com/docs/sources/event-streams/sdks/rudderstack-javascript-sdk/.'"
   },
   "keywords": [
     "analytics",
