chore: fix workspace setup steps in workflows to optimize time (#2023)
* chore: fix workspace setup steps in workflows to optimize time

* chore: fix setup step

--- a/.github/workflows/security-code-quality-and-bundle-size-checks.yml
+++ b/.github/workflows/security-code-quality-and-bundle-size-checks.yml
@@ -54,7 +54,7 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'npm'
 
-      - name: Install dependencies
+      - name: Setup workspace
         env:
           HUSKY: 0
         run: |
