feat: delete event delivery plugins

--- a/packages/analytics-js-plugins/tsconfig.spec.json
+++ b/packages/analytics-js-plugins/tsconfig.spec.json
@@ -18,7 +18,6 @@
     "__fixtures__/**/*.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
-    "../analytics-js-common/src/**/*",
-    "../analytics-js/src/**/*"
+    "../analytics-js-common/src/**/*"
   ]
 }
