--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -198,6 +198,17 @@ jobs:
           aws s3 cp ${{ env.CORE_ARTIFACTS_BASE_PATH }}/legacy/iife/ $s3_path_prefix/legacy/ $copy_args
           aws s3 cp ${{ env.CORE_ARTIFACTS_BASE_PATH }}/modern/iife/ $s3_path_prefix/modern/ $copy_args
 
+      # Note: Although, it might seem like this step is not required when a new version is deployed,
+      # as these artifacts are copied for the first time, we're invalidating the cache for the case
+      # where a release only contains changes to the integrations or plugins or both and the new artifacts 
+      # are replaced with the old ones in the versioned directory.
+      - name: Invalidate CloudFront cache for all the SDK artifacts (versioned directory)
+        if: ${{ inputs.environment == 'production' }}
+        run: |
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ env.CURRENT_VERSION_VALUE }}*" --query "Invalidation.Id" --output text)
+
+          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+
       - name: Copy SDK plugins and integrations artifacts to S3
         # IMPORTANT: We're deliberately avoiding copying these artifacts for the production environment
         # as they are already copied to versioned directory and expected to be loaded from there
@@ -316,3 +327,16 @@ jobs:
 
           aws s3 cp $integration_sdks_path_prefix/legacy/js-integrations/ $s3_path_prefix/js-integrations/ $copy_args
           aws s3 cp $integration_sdks_path_prefix/modern/js-integrations/ $s3_path_prefix/modern/js-integrations/ $copy_args
+
+      # Note: Although, it might seem like this step is not required when a new version is deployed,
+      # as these artifacts are copied for the first time, we're invalidating the cache for the case
+      # where a release only contains changes to the integrations or plugins or both and the new artifacts 
+      # are replaced with the old ones in the versioned directory.
+      # 
+      # These version directory artifacts of legacy SDK are not actually used in production but to be in parity with the v3 SDK 
+      # we're performing the same operation.
+      - name: Invalidate CloudFront cache for all the legacy SDK artifacts (versioned directory)
+        run: |
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ env.CURRENT_VERSION_V1_VALUE }}*" --query "Invalidation.Id" --output text)
+
+          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
