chore: add dep version to the overrides section

--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "debug": "4.3.4",
     "ws": "7.5.10",
     "path-to-regexp": "6.3.0",
+    "eslint-config-prettier": "10.0.2",
     "@size-limit/webpack": {
       "nanoid": "5.0.9"
     }
