--- a/package.json
+++ b/package.json
@@ -150,9 +150,9 @@
     "dotenv": "16.4.7",
     "each": "2.7.2",
     "eslint": "9.21.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-airbnb-typescript": "18.0.0",
+    "@eslint/js": "9.21.0",
+    "@typescript-eslint/eslint-plugin": "8.26.0",
+    "@typescript-eslint/parser": "8.26.0",
     "eslint-config-prettier": "10.0.2",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.8.3",
