--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -97,7 +97,8 @@
     "axios-retry": "4.5.0",
     "component-type": "2.0.0",
     "join-component": "1.1.0",
-    "ms": "2.1.3"
+    "ms": "2.1.3",
+    "ramda": "0.30.1"
   },
   "devDependencies": {
     "@types/ms": "2.1.0",
