--- a/packages/analytics-js-service-worker/tsconfig.spec.json
+++ b/packages/analytics-js-service-worker/tsconfig.spec.json
@@ -17,6 +17,7 @@
     "__mocks__/**/*.ts",
     "__fixtures__/**/*.ts",
     "src/**/*.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "../analytics-js-common/src/**/*"
   ]
 }
