--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -82,7 +82,12 @@
     "directory": "packages/analytics-v1.1"
   },
   "dependencies": {
-    "@rudderstack/analytics-js-common": "*"
+    "@rudderstack/analytics-js-common": "*",
+    "get-value": "4.0.1",
+    "ramda": "0.30.1",
+    "component-emitter": "2.0.0",
+    "@segment/localstorage-retry": "1.3.0",
+    "@lukeed/uuid": "2.0.1"
   },
   "devDependencies": {},
   "overrides": {},
