chore: npm scripts clean up

--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -22,12 +22,10 @@
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf -rf ./reports",
     "start": "rollup -c --watch --environment DEV_SERVER",
-    "build": "npm run build:browser",
-    "build:original": "npm run build:browser:original",
-    "build:modern": "npm run build:browser:modern",
-    "build:browser:modern": "exit 0",
-    "build:browser:original": "rollup -c --environment VERSION:$npm_package_version",
-    "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY",
+    "build": "npm run build:browser && npm run build:package",
+    "build:modern": "npm run build:browser:modern && npm run build:package:modern",
+    "build:browser:modern": "rollup -c --environment VERSION:$npm_package_version,UGLIFY",
+    "build:browser": "rollup -c --environment VERSION:$npm_package_version",
     "build:package": "exit 0",
     "build:package:modern": "exit 0",
     "test": "nx test --maxWorkers=50%",
