--- a/.github/workflows/create-hotfix-branch.yml
+++ b/.github/workflows/create-hotfix-branch.yml
@@ -3,8 +3,8 @@ name: Create a new hotfix branch
 on:
   workflow_dispatch:
     inputs:
-      hotfix_name:
-        description: Hotfix branch name
+      hotfix_branch_name:
+        description: Hotfix branch name ('hotfix/' is automatically prepended)
         required: true
 
 jobs:
@@ -22,9 +22,19 @@ jobs:
     runs-on: [self-hosted, Linux, X64]
     needs: validate-actor
     steps:
-      - name: Create branch
-        uses: peterjgrainger/action-create-branch@v3.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout source code
+        uses: actions/checkout@v4
         with:
-          branch: 'hotfix/${{ github.event.inputs.hotfix_name }}'
+          fetch-depth: 0
+
+      # In order to make a commit, we need to initialize a user.
+      # You may choose to write something less generic here if you want, it doesn't matter functionality wise.
+      - name: Initialize mandatory git config
+        run: |
+          git config user.name "GitHub actions"
+          git config user.email noreply@github.com
+
+      - name: Create hotfix branch
+        run: |
+          chmod +x scripts/create-hotfix-branch.sh
+          ./scripts/create-hotfix-branch.sh "${{ github.event.inputs.hotfix_branch_name }}"
