--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -111,27 +111,34 @@ jobs:
           git push --follow-tags
 
       - name: Create pull request into main
-        uses: repo-sync/pull-request@v2
-        with:
-          source_branch: ${{ steps.create-release.outputs.branch_name }}
-          destination_branch: 'main'
-          github_token: ${{ secrets.PAT }}
-          pr_title: 'chore(release): merge ${{ steps.create-release.outputs.branch_name }} into main [${{ github.event.inputs.release_ticket_id }}]'
-          pr_body: |
-            :crown: **Automated Release PR**
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}
+        run: |
+          pr_title="chore(release): merge ${{ steps.create-release.outputs.branch_name }} into main [${{ github.event.inputs.release_ticket_id }}]"
+          
+          # Create PR body with proper formatting
+          cat > pr_body.md << EOF
+          :crown: **Automated Release PR**
 
-            This pull request was created automatically by the GitHub Actions workflow. It merges the release branch (`${{ steps.create-release.outputs.branch_name }}`) into the `main` branch.
+          This pull request was created automatically by the GitHub Actions workflow. It merges the release branch (\`${{ steps.create-release.outputs.branch_name }}\`) into the \`main\` branch.
 
-            This ensures that the latest release branch changes are incorporated into the `main` branch for production.
+          This ensures that the latest release branch changes are incorporated into the \`main\` branch for production.
 
-            ### Details
-            - **Release Version**: v${{ env.NEW_VERSION_VALUE }}
-            - **Release Branch**: `${{ steps.create-release.outputs.branch_name }}`
-            - **Related Ticket**: [${{ github.event.inputs.release_ticket_id }}](https://linear.app/rudderstack/issue/${{ github.event.inputs.release_ticket_id }})
+          ### Details
+          - **Release Version**: v${{ env.NEW_VERSION_VALUE }}
+          - **Release Branch**: \`${{ steps.create-release.outputs.branch_name }}\`
+          - **Related Ticket**: [${{ github.event.inputs.release_ticket_id }}](https://linear.app/rudderstack/issue/${{ github.event.inputs.release_ticket_id }})
 
-            ---
-            Please review and merge when ready. :rocket:
-
+          ---
+          Please review and merge when ready. :rocket:
+          EOF
+          
+          # Create the PR using GitHub CLI
+          gh pr create \
+            --base main \
+            --head ${{ steps.create-release.outputs.branch_name }} \
+            --title "$pr_title" \
+            --body-file pr_body.md
 
       - name: Delete hotfix release base branch
         continue-on-error: true
